extends Node2D

#this is the level script

#var player = null
#var deslocation = Vector2(100,100)
# Declare member variables here. Examples:
# var a = 2
# var b = "text"

export var occupied = {
		"dropzone": false,
		"dropzone2": false,
		"dropzone3": false,
		"dropzone4": false,
		"dropzone5": false,
		"dropzone6": false,
		"dropzone7": false,
		"dropzone8": false,
		"dropzone9": false,
	}

var present_node


